# JPEG-encoder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/backend/: BitBuffer.cpp  BitBuffer.hpp  CMakeLists.txt  ColorConversion.cpp  ColorConversion.hpp  DCT.cpp  DCT.hpp  FileWrite.cpp  FileWrite.hpp  Image.hpp  LosslessCompression.cpp  LosslessCompression.hpp  image_processing_tga.cpp  image_processing_tga.hpp  jpgenc.hpp  tables.hpp
src/backend/cuda_backend/: CMakeLists.txt  CudaColorConversion.cu  CudaColorConversion.hpp  CudaDCT.cu  CudaDCT.hpp  CudaFileWrite.cpp  CudaFileWrite.cu  CudaFileWrite.hpp  ThreadPool.cpp  ThreadPool.hpp  cuda_backend.hpp
src/cli/: CMakeLists.txt  fileReading.cpp  fileReading.hpp  main.cpp
tests/: CMakeLists.txt  CompressionTests.cpp  DCT_tests.cpp  chroma_sampling.cpp  test_helperfunctions.cpp  test_helperfunctions.hpp  tga_tests.cpp
